--- a/DoAn.tex
+++ b/DoAn.tex
@@ -182,9 +182,9 @@
 \pagenumbering{gobble}
 \subfile{Chuong/0_3_Tom_tat_noi_dung.tex}
 
-\newpage
-\pagenumbering{gobble}
-\subfile{Chuong/0_4_Tom_tat_noi_dung_English.tex}
+% \newpage
+% \pagenumbering{gobble}
+% \subfile{Chuong/0_4_Tom_tat_noi_dung_English.tex}
 
 % ===================================================
 % \pagestyle{empty} % Header và footer rỗng
@@ -193,32 +193,32 @@
 \renewcommand*\contentsname{MỤC LỤC}
 
 \titlecontents{chapter}
-    [0.0cm]             % left margin
-    {\bfseries\vspace{0.3cm}}                  % above code
-    {{\bfseries{\scshape}
-    CHƯƠNG \thecontentslabel.\ }}
-    % numbered format
-    {}         % unnumbered format
-    {\titlerule*[0.3pc]{.}\contentspage}         % filler-page-format, e.g dots
+[0.0cm]             % left margin
+{\bfseries\vspace{0.3cm}}                  % above code
+{{\bfseries{\scshape}
+            CHƯƠNG \thecontentslabel.\ }}
+% numbered format
+{}         % unnumbered format
+{\titlerule*[0.3pc]{.}\contentspage}         % filler-page-format, e.g dots
 
-    
+
 \titlecontents{section}
-    [0.0cm]             % left margin
-    {\vspace{0.3cm}}                  % above code
-    {\thecontentslabel \ } % numbered format
-    {}         % unnumbered format
-    {\titlerule*[0.3pc]{.}\contentspage}         % filler-page-format, e.g dots
-    
-\titlecontents{subsection}
-    [1.0cm]             % left margin
-    {\vspace{0.3cm}}                  % above code
-    {\thecontentslabel \ } % numbered format
-    {}         % unnumbered format
-    {\titlerule*[0.3pc]{.}\contentspage}         % filler-page-format, e.g dots
+[0.0cm]             % left margin
+{\vspace{0.3cm}}                  % above code
+{\thecontentslabel \ } % numbered format
+{}         % unnumbered format
+{\titlerule*[0.3pc]{.}\contentspage}         % filler-page-format, e.g dots
 
- % Tạo mục lục tự động
+\titlecontents{subsection}
+[1.0cm]             % left margin
+{\vspace{0.3cm}}                  % above code
+{\thecontentslabel \ } % numbered format
+{}         % unnumbered format
+{\titlerule*[0.3pc]{.}\contentspage}         % filler-page-format, e.g dots
+
+% Tạo mục lục tự động
 \addtocontents{toc}{\protect\thispagestyle{empty}}
-\tableofcontents 
+\tableofcontents
 \thispagestyle{empty}
 \cleardoublepage
 
@@ -226,29 +226,29 @@
 %Tạo danh mục hình vẽ.
 \renewcommand{\listfigurename}{DANH MỤC HÌNH VẼ}
 {\let\oldnumberline\numberline
-\renewcommand{\numberline}{Hình~\oldnumberline}
-\listoffigures} 
+    \renewcommand{\numberline}{Hình~\oldnumberline}
+    \listoffigures}
 % \phantomsection\addcontentsline{toc}{section}{\numberline {} DANH MỤC HÌNH VẼ}
 \newpage
 
 
- %Tạo danh mục bảng biểu.
+%Tạo danh mục bảng biểu.
 \renewcommand{\listtablename}{DANH MỤC BẢNG BIỂU}
 {\let\oldnumberline\numberline
-\renewcommand{\numberline}{Bảng~\oldnumberline}
-\listoftables}
+    \renewcommand{\numberline}{Bảng~\oldnumberline}
+    \listoftables}
 % \phantomsection\addcontentsline{toc}{section}{\numberline {} DANH MỤC BẢNG BIỂU}
 
-\glsaddall 
- \renewcommand*{\glossaryname}{Danh sách thuật ngữ}
+\glsaddall
+\renewcommand*{\glossaryname}{Danh sách thuật ngữ}
 \renewcommand*{\acronymname}{DANH MỤC THUẬT NGỮ VÀ TỪ VIẾT TẮT}
 \renewcommand*{\entryname}{Thuật ngữ}
 \renewcommand*{\descriptionname}{Ý nghĩa}
 \printnoidxglossaries
- %\phantomsection\addcontentsline{toc}{section}{\numberline {} DANH MỤC THUẬT NGỮ VÀ TỪ VIẾT TẮT}
+%\phantomsection\addcontentsline{toc}{section}{\numberline {} DANH MỤC THUẬT NGỮ VÀ TỪ VIẾT TẮT}
 
 % \newpage
- %\subfile{chapters/0_5_Danh_muc_viet_tat.tex}
+%\subfile{chapters/0_5_Danh_muc_viet_tat.tex}
 
 % \newpage
 % \subfile{chapters/0_6_Thuat_ngu.tex}
@@ -287,22 +287,23 @@
 \label{chapter:Experiment}
 \subfile{Chuong/4_Ket_qua_thuc_nghiem}
 
-\newpage
+% \newpage
 %\pagestyle{fancy} % Áp dụng header và footer
-\chapter{CÁC GIẢI PHÁP VÀ ĐÓNG GÓP NỔI BẬT}
-\label{chapter:SolutionAndContribution}
-\subfile{Chuong/5_Giai_phap_dong_gop}
-\newpage
-%\pagestyle{fancy} % Áp dụng header và footer
-\chapter{KẾT LUẬN VÀ HƯỚNG PHÁT TRIỂN} %Kết luận và hướng phát triển}
-\label{chapter:conclusion}
-\subfile{Chuong/6_Ket_luan}
+% \chapter{CÁC GIẢI PHÁP VÀ ĐÓNG GÓP NỔI BẬT}
+% \label{chapter:SolutionAndContribution}
+% \subfile{Chuong/5_Giai_phap_dong_gop}
 
 \newpage
 %\pagestyle{fancy} % Áp dụng header và footer
-\chapter*{MỘT SỐ LƯU Ý VỀ TÀI LIỆU THAM KHẢO} %Kết luận và hướng phát triển}
-\label{chapter:reference}
-\subfile{Chuong/7_Luu_y_tai_lieu_tham_khao}
+\chapter{KẾT LUẬN VÀ HƯỚNG PHÁT TRIỂN} %Kết luận và hướng phát triển
+\label{chapter:conclusion}
+\subfile{Chuong/6_Ket_luan}
+
+% \newpage
+% %\pagestyle{fancy} % Áp dụng header và footer
+% \chapter*{MỘT SỐ LƯU Ý VỀ TÀI LIỆU THAM KHẢO}
+% \label{chapter:reference}
+% \subfile{Chuong/7_Luu_y_tai_lieu_tham_khao}
 
 
 % ===================================================
@@ -318,18 +319,18 @@
 % \chapter*{PHỤ LỤC} %Kết luận và hướng phát triển}
 
 %\mainmatter
-\titleformat{\chapter}[hang]{\centering\bfseries}{ \thechapter.\ }{0pt}{}[]
-\titlespacing*{\chapter}{0pt}{-20pt}{20pt}
+% \titleformat{\chapter}[hang]{\centering\bfseries}{ \thechapter.\ }{0pt}{}[]
+% \titlespacing*{\chapter}{0pt}{-20pt}{20pt}
 
-\titlecontents{chapter}
-    [0.0cm]             % left margin
-    {\bfseries\vspace{0.3cm}}                  % above code
-    {{\bfseries{\scshape} \thecontentslabel.\ }} % numbered format
-    {}         % unnumbered format
-    {\titlerule*[0.3pc]{.}\contentspage}         % filler-page-format, e.g dots
-\chapter{HƯỚNG DẪN VIẾT ĐỒ ÁN TỐT NGHIỆP}
-\subfile{Chuong/Phu_luc_A}
-\newpage
-\chapter{ĐẶC TẢ USE CASE}
-\subfile{Chuong/Phu_luc_B}
+% \titlecontents{chapter}
+% [0.0cm]             % left margin
+% {\bfseries\vspace{0.3cm}}                  % above code
+% {{\bfseries{\scshape} \thecontentslabel.\ }} % numbered format
+% {}         % unnumbered format
+% {\titlerule*[0.3pc]{.}\contentspage}         % filler-page-format, e.g dots
+% \chapter{HƯỚNG DẪN VIẾT ĐỒ ÁN TỐT NGHIỆP}
+% \subfile{Chuong/Phu_luc_A}
+% \newpage
+% \chapter{ĐẶC TẢ USE CASE}
+% \subfile{Chuong/Phu_luc_B}
 \end{document}
