Add new references and grammar check

--- a/Danh_sach_tai_lieu_tham_khao.bib
+++ b/Danh_sach_tai_lieu_tham_khao.bib
@@ -11,3 +11,47 @@
   url     = {https://www.ibm.com/topics/docker},
   urldate = {2023-01-02},
 }
+
+
+@misc{KubernetesIBM,
+  author  = {{IBM Inc.}},
+  title   = {What is Kubernetes?},
+  url     = {https://www.ibm.com/topics/kubernetes},
+  urldate = {2023-01-02},
+}
+
+@misc{PostgresIBM,
+  author  = {{IBM Inc.}},
+  title   = {What is PostgreSQL?},
+  url     = {https://www.ibm.com/topics/postgresql},
+  urldate = {2023-01-02},
+}
+
+@misc{DotNetMS,
+  author  = {{Microsoft Inc.}},
+  title   = {Why choose .NET?},
+  url     = {https://dotnet.microsoft.com/en-us/platform/why-choose-dotnet},
+  urldate = {2023-01-02},
+}
+
+@book{BuildingMicroservices,
+  author    = {Sam Newman},
+  publisher = {O'Reilly Media},
+  title     = {Building Microservices: Designing Fine-Grained Systems},
+  year      = {2021},
+}
+
+@book{MicroservicesPatterns,
+  author    = {Chirs Richardson},
+  publisher = {Manning},
+  title     = {Microservices Patterns},
+  year      = {2019},
+}
+
+@book{DesignPatterns,
+  author    = {Alexander Shvets},
+  publisher = {Refactoring.Guru},
+  title     = {Dive Into Design Patterns},
+  year      = {2022},
+}
+
