Add Draft version 2

--- a/DoAn.tex
+++ b/DoAn.tex
@@ -274,7 +274,6 @@
 \label{chapter:Related_works}
 \subfile{Chuong/2_Khao_sat}
 
-
 \newpage
 %\pagestyle{fancy} % Áp dụng header và footer
 \chapter{CÔNG NGHỆ SỬ DỤNG}
@@ -287,11 +286,11 @@
 \label{chapter:Experiment}
 \subfile{Chuong/4_Ket_qua_thuc_nghiem}
 
-% \newpage
+\newpage
 %\pagestyle{fancy} % Áp dụng header và footer
-% \chapter{CÁC GIẢI PHÁP VÀ ĐÓNG GÓP NỔI BẬT}
-% \label{chapter:SolutionAndContribution}
-% \subfile{Chuong/5_Giai_phap_dong_gop}
+\chapter{CÁC GIẢI PHÁP VÀ ĐÓNG GÓP NỔI BẬT}
+\label{chapter:SolutionAndContribution}
+\subfile{Chuong/5_Giai_phap_dong_gop}
 
 \newpage
 %\pagestyle{fancy} % Áp dụng header và footer
@@ -312,9 +311,9 @@
 \printbibliography
 \phantomsection\addcontentsline{toc}{chapter}{TÀI LIỆU THAM KHẢO}
 
-\appendixpage
-\appendices
-\addappheadtotoc
+% \appendixpage
+% \appendices
+% \addappheadtotoc
 
 % \chapter*{PHỤ LỤC} %Kết luận và hướng phát triển}
 
