--- a/Bia.tex
+++ b/Bia.tex
@@ -18,7 +18,7 @@
     {\textbf{\large{TRẦN MINH}}}\\
     {\large{minh.t183801@sis.hust.edu.vn}}\\[0.5cm]
 
-    {\textbf{\large{Ngành Công nghệ thông tin và Truyền thông}}}\\
+    {\textbf{\large{Ngành Kỹ thuật máy tính}}}\\
     %{\textbf{\large{Chuyên ngành Hệ thống thông tin}}}\\
 
     \vspace{2cm}
